# Wordly_Rus

./: .gitignore  CMakeLists.txt  README.md  fiveletters.txt
.github/workflows/: release.yml
include/: functions.h
src/: CMakeLists.txt  fiveletters.txt  fourletters.txt  functions.cpp  g.txt  main.cpp  sevenletters.txt  sixletters.txt
